Add html content

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="section">
+    <main class="full-section">
       <h1>Jared Goldstein</h1>
       <menu>
         <li><a href="https://github.com/JaredGold"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo"></a></li>
