revert css and html back

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="full-section">
+    <main>
       <h1>Jared Goldstein</h1>
       <menu>
         <li><a href="https://github.com/JaredGold"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo"></a></li>
