--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container-y">
+  <div>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -20,15 +20,19 @@
       </ul>
     </nav>
     <main>
-        <section class="card-section">
-            <h1>About Me</h1>
-        </section>
-        <section class="card-section">
-            <h1>About Me</h1>
-        </section>
-        <section class="card-section">
-            <h1>About Me</h1>
-        </section>
+      <section>
+        <h1>About Me</h1>
+      </section>
+      <section>
+        <h1>What I know</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+          quae.</p>
+      </section>
+      <section>
+        <h1>What I know</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+          quae.</p>
+      </section>
     </main>
   </div>
 
