--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -19,7 +19,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="section">
+    <main>
         <h1>Blog</h1>
     </main>
   </div>
