align center index

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   <title>Jared Goldstein Portfolio</title>
 </head>
 
-<body>
-  <div>
+<body id="home-page">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -19,17 +18,16 @@
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main>
+    <main class="center">
       <h1>Jared Goldstein</h1>
       <menu>
-        <li><a href="https://github.com/JaredGold"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo"></a></li>
+        <li><a href="https://github.com/JaredGold"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo" class="b&w"></a></li>
         <li><a href="https://www.linkedin.com/in/jared-goldstein/"><img src="images/LinkedIn-64.png"
-              alt="LinkedIn Logo"></a></li>
-        <li><a href="https://twitter.com/Time4Jared"><img src="images/Twitter-64.png" alt="Twitter Logo"></a></li>
-        <li><a href="mailto:jegoldstein94@gmail.com"><img src="images/mail-64.png" alt="mail logo"></a></li>
+              alt="LinkedIn Logo" class="b&w"></a></li>
+        <li><a href="https://twitter.com/Time4Jared"><img src="images/Twitter-64.png" alt="Twitter Logo" class="b&w"></a></li>
+        <li><a href="mailto:jegoldstein94@gmail.com"><img src="images/mail-64.png" alt="mail logo" class="b&w"></a></li>
       </menu>
     </main>
-  </div>
 
 </body>
 
