add scroll snap

--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -8,34 +8,32 @@
   <title>Jared Goldstein Portfolio</title>
 </head>
 
-<body>
-  <div>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <section>
-        <h1>About Me</h1>
-      </section>
-      <section>
-        <h1>What I know</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-          quae.</p>
-      </section>
-      <section>
-        <h1>What I know</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-          quae.</p>
-      </section>
-    </main>
-  </div>
-
+<body id="about-me">
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main class="center container">
+    <section class="item">
+      <h1>About Me</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
+    </section>
+    <section class="item">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+    <section class="item"  id="bottom-item">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+  </main>
 </body>
 
 </html>
