--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
   <main class="center container">
-    <section class="item">
+    <section class="item" id="top-item"> 
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
     </section>
