add horizontal scrolling to porfolio

--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -18,8 +18,8 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <main class="center container">
-    <section class="item" id="top-item"> 
+  <main class="center container-y">
+    <section class="item" id="top-item">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
     </section>
@@ -28,7 +28,7 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
     </section>
-    <section class="item"  id="bottom-item">
+    <section class="item" id="bottom-item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
