--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -9,21 +9,42 @@
 </head>
 
 <body>
-  <div>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-        <h1>Portfolio</h1>
-    </main>
-  </div>
-
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <h1>Portfolio</h1>
+  <main class="container-x">
+    <section class="item-x" id="start-item">
+      <h1>About Me</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
+    </section>
+    <section class="item-x">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+    <section class="item-x">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+    <section class="item-x">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+    <section class="item-x" id="end-item">
+      <h1>What I know</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
+        quae.</p>
+    </section>
+  </main>
 </body>
 
 </html>
