--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -8,7 +8,7 @@
   <title>Jared Goldstein Portfolio</title>
 </head>
 
-<body>
+<body id="contact-me">
   <div>
     <nav>
       <ul>
@@ -19,8 +19,17 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main>
-        <h1>Contact Me</h1>
+    <main class="contact-me">
+      <h1>Contact Me</h1>
+
+      <form action="">
+        <div class="form">
+          <input type="text" name="name" autocomplete="off" required>
+          <label for="name" class="label-name">
+            <span class="content-name">Name</span>
+          </label>
+        </div>
+      </form>
     </main>
   </div>
 
