add new form elements

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -29,6 +29,18 @@
             <span class="content-name">Name</span>
           </label>
         </div>
+        <div class="form">
+          <input type="email" name="name" autocomplete="off" required>
+          <label for="name" class="label-name">
+            <span class="content-name">Email</span>
+          </label>
+        </div>
+        <div class="form">
+          <input type="tel" name="phone" autocomplete="off" required>
+          <label for="number" class="label-name">
+            <span class="content-name">Phone Number</span>
+          </label>
+        </div>
       </form>
     </main>
   </div>
