--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
     <main class="center">
       <h1>Jared Goldstein</h1>
       <menu>
-        <li><a href="https://github.com/JaredGold"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo" class="b&w"></a></li>
-        <li><a href="https://www.linkedin.com/in/jared-goldstein/"><img src="images/LinkedIn-64.png"
+        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo" class="b&w"></a></li>
+        <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank"><img src="images/LinkedIn-64.png"
               alt="LinkedIn Logo" class="b&w"></a></li>
-        <li><a href="https://twitter.com/Time4Jared"><img src="images/Twitter-64.png" alt="Twitter Logo" class="b&w"></a></li>
-        <li><a href="mailto:jegoldstein94@gmail.com"><img src="images/mail-64.png" alt="mail logo" class="b&w"></a></li>
+        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/Twitter-64.png" alt="Twitter Logo" class="b&w"></a></li>
+        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/mail-64.png" alt="mail logo" class="b&w"></a></li>
       </menu>
     </main>
 
