--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -22,7 +22,7 @@
     <main class="contact-me">
       <h1>Contact Me</h1>
 
-      <form action="">
+      <form action="mailto:jegoldstein94@gmail.com" method="get" enctype="text/plain">
         <div class="form">
           <input type="text" name="name" autocomplete="off" required>
           <label for="name" class="label-name">
@@ -41,6 +41,13 @@
             <span class="content-name">Phone Number</span>
           </label>
         </div>
+        <div class="form">
+          <input type="text" name="message" autocomplete="off" required>
+          <label for="message" class="label-name">
+            <span class="content-name">Your Message</span>
+          </label>
+        </div>
+        <button type="submit" class="button">Submit</button>
       </form>
     </main>
   </div>
