Change Portfolio to Y Scrolling

--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -8,7 +8,7 @@
   <title>Jared Goldstein Portfolio</title>
 </head>
 
-<body>
+<body id="portfolio">
   <nav>
     <ul>
       <li><a href="../index.html">Home</a></li>
@@ -18,28 +18,28 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <h1>Portfolio</h1>
-  <main class="container-x">
-    <section class="item-x" id="start-item">
+    <h1>Portfolio</h1>
+    <main class="container-y">
+    <section class="item top-item">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
     </section>
-    <section class="item-x">
+    <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
     </section>
-    <section class="item-x">
+    <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
     </section>
-    <section class="item-x">
+    <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
     </section>
-    <section class="item-x" id="end-item">
+    <section class="item bottom-item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
