--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -18,31 +18,39 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-    <h1>Portfolio</h1>
-    <main class="container-y">
-    <section class="item top-item">
+
+  <main class="container-y">
+    <section class="item top-item" id="top">
+      <h1>Portfolio</h1>
+    </section>
+    <section class="item">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
+      <a href="#top">Back to Top</a>
     </section>
     <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
+      <a href="#top">Back to Top</a>
     </section>
     <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
+      <a href="#top">Back to Top</a>
     </section>
     <section class="item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
+      <a href="#top">Back to Top</a>
     </section>
     <section class="item bottom-item">
       <h1>What I know</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
         quae.</p>
+      <a href="#top">Back to Top</a>
     </section>
   </main>
 </body>
