add slight mobile support

--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,36 @@
 </head>
 
 <body id="home-page">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/aboutme.html">About Me</a></li>
-        <li><a href="pages/portfolio.html">Portfolio</a></li>
-        <li><a href="pages/blog.html">Blog</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main class="center">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="pages/aboutme.html">About Me</a></li>
+      <li><a href="pages/portfolio.html">Portfolio</a></li>
+      <li><a href="pages/blog.html">Blog</a></li>
+      <li><a href="pages/contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <div class="center">
       <h1>Jared Goldstein</h1>
       <menu>
-        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/GitHub-Mark-64px.png" alt="GitHub Logo" class="b&w"></a></li>
+        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/GitHub-Mark-64px.png"
+              alt="GitHub Logo" class="b&w"></a></li>
         <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank"><img src="images/LinkedIn-64.png"
               alt="LinkedIn Logo" class="b&w"></a></li>
-        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/Twitter-64.png" alt="Twitter Logo" class="b&w"></a></li>
-        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/mail-64.png" alt="mail logo" class="b&w"></a></li>
+        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/Twitter-64.png" alt="Twitter Logo"
+              class="b&w"></a></li>
+        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/mail-64.png" alt="mail logo"
+              class="b&w"></a></li>
       </menu>
-    </main>
+    </div>
+  </main>
+  </div>
+
+  <footer>
+    <p>Copyright ©Jared Goldstein 2020</p>
+    <p>Media Links</p>
+  </footer>
 
 </body>
 
