--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -34,6 +34,11 @@
         quae.</p>
     </section>
   </main>
+
+  <footer>
+    <p>Copyright ©Jared Goldstein 2020</p>
+    <p>Media Links</p>
+  </footer>
 </body>
 
 </html>
