--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -20,9 +20,14 @@
       </ul>
     </nav>
     <main>
-        <h1>Blog</h1>
+      <h1>Blog</h1>
     </main>
   </div>
+
+  <footer>
+    <p>Copyright ©Jared Goldstein 2020</p>
+    <p>Media Links</p>
+  </footer>
 
 </body>
 
