--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -9,49 +9,51 @@
 </head>
 
 <body id="contact-me">
-  <div>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main class="contact-me">
-      <h1>Contact Me</h1>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main class="contact-me">
+    <h1>Contact Me</h1>
 
-      <form action="mailto:jegoldstein94@gmail.com" method="get" enctype="text/plain">
-        <div class="form">
-          <input type="text" name="name" autocomplete="off" required>
-          <label for="name" class="label-name">
-            <span class="content-name">Name</span>
-          </label>
-        </div>
-        <div class="form">
-          <input type="email" name="name" autocomplete="off" required>
-          <label for="name" class="label-name">
-            <span class="content-name">Email</span>
-          </label>
-        </div>
-        <div class="form">
-          <input type="tel" name="phone" autocomplete="off" required>
-          <label for="number" class="label-name">
-            <span class="content-name">Phone Number</span>
-          </label>
-        </div>
-        <div class="form">
-          <input type="text" name="message" autocomplete="off" required>
-          <label for="message" class="label-name">
-            <span class="content-name">Your Message</span>
-          </label>
-        </div>
-        <button type="submit" class="button">Submit</button>
-      </form>
-    </main>
-  </div>
+    <form action="mailto:jegoldstein94@gmail.com" method="post" enctype="text/plain">
+      <div class="form">
+        <input type="text" name="name" autocomplete="off" required>
+        <label for="name" class="label-name">
+          <span class="content-name">Name</span>
+        </label>
+      </div>
+      <div class="form">
+        <input type="email" name="email" autocomplete="off" required>
+        <label for="email" class="label-name">
+          <span class="content-name">Email</span>
+        </label>
+      </div>
+      <div class="form">
+        <input type="tel" name="phone" autocomplete="off" required>
+        <label for="number" class="label-name">
+          <span class="content-name">Phone Number</span>
+        </label>
+      </div>
+      <div class="form">
+        <input type="text" name="message" autocomplete="off" required>
+        <label for="message" class="label-name">
+          <span class="content-name">Your Message</span>
+        </label>
+      </div>
+      <button type="submit" class="button">Submit</button>
+    </form>
+  </main>
 
+  <footer>
+    <p>Copyright ©Jared Goldstein 2020</p>
+    <p>Media Links</p>
+  </footer>
 </body>
 
 </html>
