--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -53,6 +53,11 @@
       <a href="#top">Back to Top</a>
     </section>
   </main>
+
+  <footer>
+    <p>Copyright ©Jared Goldstein 2020</p>
+    <p>Media Links</p>
+  </footer>
 </body>
 
 </html>
