Add blog, Tweak fonts and colors

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <title>Jared Goldstein Portfolio</title>
 </head>
 
@@ -22,14 +23,14 @@
     <div class="center">
       <h1>Jared Goldstein</h1>
       <menu>
-        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/GitHub-Mark-64px.png"
-              alt="GitHub Logo" class="b&w"></a></li>
-        <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank"><img src="images/LinkedIn-64.png"
-              alt="LinkedIn Logo" class="b&w"></a></li>
-        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/Twitter-64.png" alt="Twitter Logo"
-              class="b&w"></a></li>
-        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/mail-64.png" alt="mail logo"
-              class="b&w"></a></li>
+        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/SVG Logos/github.svg"
+              alt="GitHub Logo" class="logo"></a></li>
+        <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank"><img
+              src="images/SVG Logos/linkedin.svg" alt="LinkedIn Logo" class="logo"></a></li>
+        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/SVG Logos/twitter.svg"
+              alt="Twitter Logo" class="logo"></a></li>
+        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/SVG Logos/gmail.svg" alt="mail logo"
+              class="logo"></a></li>
       </menu>
     </div>
   </main>
