--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap"
+    rel="stylesheet">
+
   <title>Jared Goldstein Portfolio</title>
 </head>
 
@@ -20,7 +23,59 @@
       </ul>
     </nav>
     <main>
-      <h1>Blog</h1>
+      <section class="container-y">
+        <div class="item-blog">
+          <div class="blog-image-container">
+            <img src="../images/blog-images/image-1.webp" alt="block of code" class="blog-image">
+          </div>
+          <article>
+            <h1 class="center">Freedom of Self</h1>
+            <h2>15-09-2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          </article>
+        </div>
+        <div class="item-blog">
+          <div class="blog-image-container">
+            <img src="../images/blog-images/image-2.webp" alt="block of code" class="blog-image">
+          </div>
+          <article>
+            <h1 class="center">Half-Life 3 is it confirmed?</h1>
+            <h2>16-09-2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          </article>
+        </div>
+        <div class="item-blog">
+          <div class="blog-image-container">
+            <img src="../images/blog-images/image-3.webp" alt="block of code" class="blog-image">
+          </div>
+          <article>
+            <h1 class="center">Does Horizontral Monitors Matter?</h1>
+            <h2>17-09-2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          </article>
+        </div>
+        <div class="item-blog">
+          <div class="blog-image-container">
+            <img src="../images/blog-images/image-4.webp" plt="block of code" class="blog-image">
+          </div>
+          <article>
+            <h1 class="center">What are you doing?</h1>
+            <h2>18-09-2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          </article>
+        </div>
+        <div class="item-blog">
+          <div class="blog-image-container">
+            <img src="../images/blog-images/image-5.webp" alt="block of code" class="blog-image">
+          </div>
+          <article>
+            <h1 class="center">I like scrabble!</h1>
+            <h2>19-09-2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          </article>
+        </div>
+      </section>
+
     </main>
   </div>
 
