--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <title>Jared Goldstein Portfolio</title>
 </head>
 
-<body id="portfolio">
+<body>
   <nav>
     <ul>
       <li><a href="../index.html">Home</a></li>
@@ -20,10 +21,7 @@
   </nav>
 
   <main class="container-y">
-    <section class="item top-item" id="top">
-      <h1>Portfolio</h1>
-    </section>
-    <section class="item">
+    <section class="item" id="top">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
       <a href="#top">Back to Top</a>
