--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
   <title>Jared Goldstein Portfolio</title>
 </head>
 
@@ -19,7 +21,7 @@
     </ul>
   </nav>
   <main class="center container-y">
-    <section class="item top-item">
+    <section class="item">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
     </section>
