--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
   <title>Jared Goldstein Portfolio</title>
 </head>
 
