add mobile support to home page

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </nav>
   <main>
     <div class="center">
-      <h1>Jared Goldstein</h1>
+      <h1>Ja<span id="red">red</span> <span id="gold">Gold</span>stein</h1>
       <menu>
         <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/SVG Logos/github.svg"
               alt="GitHub Logo" class="logo"></a></li>
@@ -38,7 +38,6 @@
 
   <footer>
     <p>Copyright ©Jared Goldstein 2020</p>
-    <p>Media Links</p>
   </footer>
 
 </body>
