--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -11,13 +11,23 @@
 
 <body>
   <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <input type="checkbox" name="" id="" class="toggler">
+    <div class="hamburger">
+      <div></div>
+    </div>
+    <div class="menu">
+      <div>
+        <div id="nav-parent">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </nav>
 
   <main class="container-y">
