--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -12,14 +12,25 @@
 
 <body id="about-me">
   <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <input type="checkbox" name="" id="" class="toggler">
+    <div class="hamburger">
+      <div></div>
+    </div>
+    <div class="menu">
+      <div>
+        <div id="nav-parent">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </nav>
+
   <main class="center container-y">
     <section class="item">
       <h1>About Me</h1>
