add vertical support

--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -30,36 +30,61 @@
     </div>
   </nav>
 
-  <main class="container-y">
-    <section class="item" id="top">
-      <h1>About Me</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
-      <a href="#top">Back to Top</a>
-    </section>
-    <section class="item">
-      <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
-      <a href="#top">Back to Top</a>
-    </section>
-    <section class="item">
-      <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
-      <a href="#top">Back to Top</a>
-    </section>
-    <section class="item">
-      <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
-      <a href="#top">Back to Top</a>
-    </section>
-    <section class="item bottom-item">
-      <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
-      <a href="#top">Back to Top</a>
-    </section>
+  <main>
+    <section class="container-y">
+      <div class="item-blog">
+        <div class="blog-image-container">
+          <img src="../images/blog-images/image-1.webp" alt="block of code" class="blog-image">
+        </div>
+        <article>
+          <h1 class="center">Paul's Pizza</h1>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+        </article>
+      </div>
+      <div class="item-blog">
+        <div class="blog-image-container">
+          <img src="../images/blog-images/image-2.webp" alt="block of code" class="blog-image">
+        </div>
+        <article>
+          <h1 class="center">TBD</h1>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+        </article>
+      </div>
+      <div class="item-blog">
+        <div class="blog-image-container">
+          <img src="../images/blog-images/image-2.webp" alt="block of code" class="blog-image">
+        </div>
+        <article>
+          <h1 class="center">TBD</h1>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+        </article>
+      </div>
+      <div class="item-blog">
+        <div class="blog-image-container">
+          <img src="../images/blog-images/image-2.webp" alt="block of code" class="blog-image">
+        </div>
+        <article>
+          <h1 class="center">TBD</h1>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+        </article>
+      </div>
+      <div class="item-blog">
+        <div class="blog-image-container">
+          <img src="../images/blog-images/image-2.webp" alt="block of code" class="blog-image">
+        </div>
+        <article>
+          <h1 class="center">TBD</h1>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+        </article>
+      </div>
+      
+      </section>
+
   </main>
 
   <footer>
