Add SEO and Update Best Practices

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
   <link rel="stylesheet" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap"
     rel="stylesheet">
@@ -34,13 +35,13 @@
     <div class="center container showcase-inner">
       <h1>Ja<span id="red">red</span> <span id="gold">Gold</span>stein</h1>
       <menu>
-        <li><a href="https://github.com/JaredGold" target="_blank"><img src="images/SVG Logos/github.svg"
+        <li><a href="https://github.com/JaredGold" target="_blank" rel="noopener" rel="noreferrer"><img src="images/SVG Logos/github.svg"
               alt="GitHub Logo" class="logo"></a></li>
-        <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank"><img
+        <li><a href="https://www.linkedin.com/in/jared-goldstein/" target="_blank" rel="noopener" rel="noreferrer"><img
               src="images/SVG Logos/linkedin.svg" alt="LinkedIn Logo" class="logo"></a></li>
-        <li><a href="https://twitter.com/Time4Jared" target="_blank"><img src="images/SVG Logos/twitter.svg"
+        <li><a href="https://twitter.com/Time4Jared" target="_blank" rel="noopener" rel="noreferrer"><img src="images/SVG Logos/twitter.svg"
               alt="Twitter Logo" class="logo"></a></li>
-        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank"><img src="images/SVG Logos/gmail.svg"
+        <li><a href="mailto:jegoldstein94@gmail.com" target="_blank" rel="noopener" rel="noreferrer"><img src="images/SVG Logos/gmail.svg"
               alt="mail logo" class="logo"></a></li>
       </menu>
     </div>
