Add contrast for visibiliy impaired users

--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <main class="center container-y">
+  <main class="center container-y contrast">
     <section class="item">
       <h1>About Me</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
