--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -32,7 +32,7 @@
   </nav>
 
   <main>
-    <section class="container-y">
+    <section class="container-y contrast">
       <div class="item-blog">
         <div class="blog-image-container">
           <img src="../images/blog-images/image-1.webp" alt="block of code" class="blog-image">
