add complete support

--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -13,7 +13,8 @@
 
 <body id="about-me">
   <nav>
-    <input type="checkbox" name="" id="" class="toggler">
+    <label for="hamburger-menu-toggle"></label>
+    <input type="checkbox" name="hamburger-menu-toggle" id="" class="toggler">
     <div class="hamburger">
       <div></div>
     </div>
@@ -31,7 +32,6 @@
       </div>
     </div>
   </nav>
-
   <main class="center container-y contrast">
     <section class="item">
       <h1>About Me</h1>
