--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -15,7 +15,8 @@
 <body>
   <div>
     <nav>
-      <input type="checkbox" name="" id="" class="toggler">
+      <label for="hamburger-menu-toggle"></label>
+      <input type="checkbox" name="hamburger-menu-toggle" id="" class="toggler">
       <div class="hamburger">
         <div></div>
       </div>
