--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -13,7 +13,8 @@
 
 <body id="contact-me">
   <nav>
-    <input type="checkbox" name="" id="" class="toggler">
+    <label for="hamburger-menu-toggle"></label>
+    <input type="checkbox" name="hamburger-menu-toggle" id="" class="toggler">
     <div class="hamburger">
       <div></div>
     </div>
