--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -12,7 +12,8 @@
 
 <body>
   <nav>
-    <input type="checkbox" name="" id="" class="toggler">
+    <label for="hamburger-menu-toggle"></label>
+    <input type="checkbox" name="hamburger-menu-toggle" id="" class="toggler">
     <div class="hamburger">
       <div></div>
     </div>
@@ -35,12 +36,12 @@
     <section class="container-y contrast">
       <div class="item-blog">
         <div class="blog-image-container">
-          <img src="../images/blog-images/image-1.webp" alt="block of code" class="blog-image">
+          <img src="../images/portfolio-images/pauls-pizzas.webp" alt="Paul's Pizzas website image" class="portfolio-image">
         </div>
         <article>
           <h1 class="center">Paul's Pizza</h1>
           <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem nemo asperiores ut earum eum molestiae laborum in odit architecto.</p>
+          <p>Paul's Pizzas is my first website I designed purely with HTML and CSS. It is not live but can be viewed on my Github</p>
         </article>
       </div>
       <div class="item-blog">
