--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -35,17 +35,23 @@
   <main class="center container-y contrast">
     <section class="item">
       <h1>About Me</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illo deserunt sequi sit mollitia hic!</p>
+      <p>My name is Jared Goldstein and I am a Junior Full Stack Enginner. <br>
+        I am currently studying at Coder Academy.</p>
     </section>
     <section class="item">
       <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
+      <div id="abt-logos">
+        <img src="../images/SVG Logos/html5.svg" class="logo" alt="html-5 logo">
+      <img src="../images/SVG Logos/css3.svg" class="logo" alt="css-3 logo">
+      <img src="../images/SVG Logos/sass.svg" class="logo" alt="sass logo">
+      <img src="../images/SVG Logos/ruby.svg" class="logo" alt="ruby logo">
+      <img src="../images/SVG Logos/rubyonrails.svg" class="logo" alt="ruby on rails logo">
+      <img src="../images/SVG Logos/javascript.svg" class="logo" alt="javascript logo">
+    </div>
     </section>
     <section class="item bottom-item">
-      <h1>What I know</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia aliquam ullam sit obcaecati possimus
-        quae.</p>
+      <h1>Resume</h1>
+      <p>Download my resume <a href="../resume/JaredG-Resume.pdf">here</a>.</p>
     </section>
   </main>
 
