--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -41,7 +41,7 @@
         <article>
           <h1 class="center">Paul's Pizza</h1>
           <br>
-          <p>Paul's Pizzas is my first website I designed purely with HTML and CSS. It is not live but can be viewed on my Github</p>
+          <p>Paul's Pizzas is my first website I designed purely with HTML and CSS. It is not live but can be viewed on my Github.</p>
         </article>
       </div>
       <div class="item-blog">
