--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css" integrity="sha512-p3/7DIX27qdj6CRvVI0R1zj7Ov1VUSzBPU2JmfCts81H5qjoNPztzcpYl01HLOjS/XBAag7WamxUMlIsOdasiQ== sha384-HWcDjY023x8dwdoSv2NV6ZZVS7Q6HycdgwFCC1zFjmZ+G8amcFI8NByxWdJQ3UtM">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
   <title>Jared Goldstein Portfolio</title>
