--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" type="image/ico" href="favicon.ico"/>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap"
     rel="stylesheet">
   <title>Jared Goldstein Portfolio</title>
